--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
         <div class="container">
             <div class="section-title">
                 <span>Latest Pictures From Gallery</span>
-                <h4>exclusive gallerys</h4>
+                <h4>exclusive galleries</h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="gallery">
