--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h4>Find Your Best <span>Healthy & Tasty Foods.</span></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio doloribus officia porro nesciunt rerum
                     totam enim ad tempore. Nesciunt, pariatur!</p>
-                <a href="" class="btn">discover more</a>
+                <a href="#menus" class="btn">discover more</a>
             </div>
         </div>
     </section>
@@ -73,7 +73,7 @@
                             <li>Music & Other Facilities</li>
                         </ul>
                     </div>
-                    <a href="" class="btn">reserve a table</a>
+                    <a href="#booking" class="btn">reserve a table</a>
                 </div>
             </div>
         </div>
