--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <!-- Header -->
+    <!-- Header -->
     <header class="header-area">
         <div class="container">
             <div class="header">
@@ -36,7 +37,8 @@
     </header>
 
     <!-- Banner -->
-    <section class="banner-area" style="background-image: url('./Images/klara-kulikova-WcV2YkM3Dls-unsplash.jpg');" id="home">
+    <section class="banner-area" style="background-image: url('./Images/klara-kulikova-WcV2YkM3Dls-unsplash.jpg');"
+        id="home">
         <div class="container">
             <div class="banner-content">
                 <span>Welcome To Our Restaurant</span>
@@ -81,7 +83,8 @@
 
     <!-- Food -->
 
-    <section class="foods-area" style="background-image: url(./Images/jay-wennington-N_Y88TWmGwA-unsplash.jpg);" id="menus">
+    <section class="foods-area" style="background-image: url(./Images/jay-wennington-N_Y88TWmGwA-unsplash.jpg);"
+        id="menus">
         <div class="menu">
             <div class="menu-container">
                 <div class="menu-head">
@@ -101,7 +104,7 @@
 
                     <div class="food-item featured">
                         <div class="food-img">
-                            <img src="/Images/chicken-nuggets-g9a6927c9e_1920.jpeg" alt="chicken nuggets">
+                            <img src="./Images/chicken-nuggets-g9a6927c9e_1920.jpeg" alt="chicken nuggets">
                         </div>
 
                         <div class="food-content">
@@ -120,7 +123,7 @@
 
                     <div class="food-item special-pizza">
                         <div class="food-img">
-                            <img src="/Images/Pizza Margherita.jpeg" alt="Pizza image">
+                            <img src="./Images/Pizza Margherita.jpeg" alt="Pizza image">
                         </div>
 
                         <div class="food-content">
@@ -137,7 +140,7 @@
 
                     <div class="food-item dessert">
                         <div class="food-img">
-                            <img src="/Images/Strawberry Cake.jpeg" alt="strawberry cake ">
+                            <img src="./Images/Strawberry Cake.jpeg" alt="strawberry cake ">
                         </div>
 
                         <div class="food-content">
@@ -155,7 +158,7 @@
 
                     <div class="food-item featured">
                         <div class="food-img">
-                            <img src="/Images/Breaded Chicken Strips.jpeg" alt="breaded chicken strips">
+                            <img src="./Images/Breaded Chicken Strips.jpeg" alt="breaded chicken strips">
                         </div>
 
                         <div class="food-content">
@@ -173,7 +176,7 @@
 
                     <div class="food-item special-pizza">
                         <div class="food-img">
-                            <img src="/Images/Greek Pizza.jpeg" alt="greek pizza">
+                            <img src="./Images/Greek Pizza.jpeg" alt="greek pizza">
                         </div>
 
                         <div class="food-content">
@@ -191,7 +194,7 @@
 
                     <div class="food-item dessert">
                         <div class="food-img">
-                            <img src="/Images/creme-brulee-g0b1cb3c8e_1920.jpeg" alt="creme brulee">
+                            <img src="./Images/creme-brulee-g0b1cb3c8e_1920.jpeg" alt="creme brulee">
                         </div>
 
                         <div class="food-content">
@@ -210,7 +213,7 @@
 
                     <div class="food-item featured">
                         <div class="food-img">
-                            <img src="/Images/Chicken Wings.jpeg" alt="chicken wings">
+                            <img src="./Images/Chicken Wings.jpeg" alt="chicken wings">
                         </div>
 
                         <div class="food-content">
@@ -228,7 +231,7 @@
 
                     <div class="food-item special-pizza">
                         <div class="food-img">
-                            <img src="/Images/Chicago Pizza.jpeg" alt="chicago Pizza">
+                            <img src="./Images/Chicago Pizza.jpeg" alt="chicago Pizza">
                         </div>
 
                         <div class="food-content">
@@ -246,7 +249,7 @@
 
                     <div class="food-item dessert">
                         <div class="food-img">
-                            <img src="/Images/iced-coffee-g1244c0b70_1920.jpeg" alt="iced coffee">
+                            <img src="./Images/iced-coffee-g1244c0b70_1920.jpeg" alt="iced coffee">
                         </div>
 
                         <div class="food-content">
@@ -265,7 +268,7 @@
 
                     <div class="food-item featured">
                         <div class="food-img">
-                            <img src="/Images/Garlic Bread.jpeg" alt="garlic bread">
+                            <img src="./Images/Garlic Bread.jpeg" alt="garlic bread">
                         </div>
 
                         <div class="food-content">
@@ -283,7 +286,7 @@
 
                     <div class="food-item special-pizza">
                         <div class="food-img">
-                            <img src="/Images/Pizza Paradise.jpeg" alt="Pizza paradise">
+                            <img src="./Images/Pizza Paradise.jpeg" alt="Pizza paradise">
                         </div>
 
                         <div class="food-content">
@@ -301,7 +304,7 @@
 
                     <div class="food-item dessert">
                         <div class="food-img">
-                            <img src="/Images/ice-cream-g0ae95fdc0_1920.jpeg" alt="icecream">
+                            <img src="./Images/ice-cream-g0ae95fdc0_1920.jpeg" alt="icecream">
                         </div>
 
                         <div class="food-content">
@@ -319,7 +322,7 @@
 
                     <div class="food-item featured">
                         <div class="food-img">
-                            <img src="/Images/Salad.jpeg" alt="Salad">
+                            <img src="./Images/Salad.jpeg" alt="Salad">
                         </div>
 
                         <div class="food-content">
@@ -337,7 +340,7 @@
 
                     <div class="food-item special-pizza">
                         <div class="food-img">
-                            <img src="/Images/California Pizza1.jpeg" alt="california pizza">
+                            <img src="./Images/California Pizza1.jpeg" alt="california pizza">
                         </div>
 
                         <div class="food-content">
@@ -355,7 +358,7 @@
 
                     <div class="food-item dessert">
                         <div class="food-img">
-                            <img src="/Images/sundae-g7ebc7b451_1920.jpeg" alt="sundae">
+                            <img src="./Images/sundae-g7ebc7b451_1920.jpeg" alt="sundae">
                         </div>
 
                         <div class="food-content">
@@ -373,7 +376,7 @@
 
                     <div class="food-item featured">
                         <div class="food-img">
-                            <img src="/Images/Mixed Leaf Salad.jpeg" alt="mixed leaf salad">
+                            <img src="./Images/Mixed Leaf Salad.jpeg" alt="mixed leaf salad">
                         </div>
 
                         <div class="food-content">
@@ -392,7 +395,7 @@
 
                     <div class="food-item special-pizza">
                         <div class="food-img">
-                            <img src="/Images/Black Olive Pizza.jpeg" alt="black olive pizza">
+                            <img src="./Images/Black Olive Pizza.jpeg" alt="black olive pizza">
                         </div>
 
                         <div class="food-content">
@@ -410,7 +413,7 @@
 
                     <div class="food-item dessert">
                         <div class="food-img">
-                            <img src="/Images/plum-cake-gccdb81f9e_1920.jpeg" alt="plum cake">
+                            <img src="./Images/plum-cake-gccdb81f9e_1920.jpeg" alt="plum cake">
                         </div>
 
                         <div class="food-content">
@@ -428,7 +431,7 @@
 
                     <div class="food-item featured">
                         <div class="food-img">
-                            <img src="/Images/french-fries-gc1e90ef76_1920.jpeg" alt="french fries">
+                            <img src="./Images/french-fries-gc1e90ef76_1920.jpeg" alt="french fries">
                         </div>
 
                         <div class="food-content">
@@ -446,7 +449,7 @@
 
                     <div class="food-item special-pizza">
                         <div class="food-img">
-                            <img src="/Images/Sicilian Pizza.jpeg" alt="sicilian pizza image">
+                            <img src="./Images/Sicilian Pizza.jpeg" alt="sicilian pizza image">
                         </div>
 
                         <div class="food-content">
@@ -464,7 +467,7 @@
 
                     <div class="food-item dessert">
                         <div class="food-img">
-                            <img src="/Images/mojito-g7f5ba5736_1920.jpeg" alt="mojito">
+                            <img src="./Images/mojito-g7f5ba5736_1920.jpeg" alt="mojito">
                         </div>
 
                         <div class="food-content">
@@ -482,7 +485,7 @@
 
                     <div class="food-item featured">
                         <div class="food-img">
-                            <img src="/Images/Fish Finger Sandwich.jpg" alt="fish finger sandwich">
+                            <img src="./Images/Fish Finger Sandwich.jpg" alt="fish finger sandwich">
                         </div>
 
                         <div class="food-content">
@@ -500,7 +503,7 @@
 
                     <div class="food-item special-pizza">
                         <div class="food-img">
-                            <img src="/Images/Nachos.jpg" alt="nachos">
+                            <img src="./Images/Nachos.jpg" alt="nachos">
                         </div>
 
                         <div class="food-content">
@@ -518,7 +521,7 @@
 
                     <div class="food-item dessert">
                         <div class="food-img">
-                            <img src="/Images/smoothies-gfffc6ca32_1920.jpg" alt="smoothies">
+                            <img src="./Images/smoothies-gfffc6ca32_1920.jpg" alt="smoothies">
                         </div>
 
                         <div class="food-content">
@@ -659,7 +662,7 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <form class="reserve">
-                <input type="text"  placeholder="Name">
+                <input type="text" placeholder="Name">
                 <input type="text" placeholder="Phone">
                 <input type="email" placeholder="Email">
                 <select>
@@ -690,7 +693,8 @@
             <div class="footer">
                 <div class="single-footer">
                     <h2>Yummy in Tummy</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis blanditiis fugit optio repellat vitae maxime!</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis blanditiis fugit optio
+                        repellat vitae maxime!</p>
                 </div>
                 <div class="single-footer">
                     <h4>quick links</h4>
@@ -717,15 +721,15 @@
                 <div class="single-footer">
                     <h4>get in touch</h4>
                     <div class="single-contact">
-                        <i class='bx bx-map' ></i>
+                        <i class='bx bx-map'></i>
                         <h4>address <span>#123 Street, London, UK</span></h4>
                     </div>
                     <div class="single-contact">
-                        <i class='bx bx-envelope' ></i>
+                        <i class='bx bx-envelope'></i>
                         <h4>email <span>info@yummyintummy.com</span></h4>
                     </div>
                     <div class="single-contact">
-                        <i class='bx bx-phone' ></i>
+                        <i class='bx bx-phone'></i>
                         <h4>phone <span>+44 123 4567 890</span></h4>
                     </div>
                 </div>
